# llm-utils

./: .gitignore  pyproject.toml
notebooks/langchain/: ollama_client.ipynb
src/llm_utils/: __init__.py
src/llm_utils/cli/: __main__.py  main.py  main_nlp.py
src/llm_utils/interface/: langchain.py
src/llm_utils/models/: enums.py
