[project]
name = "llm-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felipe Operti", email = "operti.felipe@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.8.1",
    "xformers==0.0.28.post2",
    "unsloth>=2024.11.5",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "python-dotenv>=1.0.1",
    "openpyxl>=3.1.5",
    "langchain-community>=0.3.7",
    "faiss-cpu>=1.9.0.post1",
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
    "langchain-ollama>=0.2.0",
    "fastembed>=0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
